# jma-feed-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.github/workflows/: ci.yml
benches/: http_serve.rs
config/: default.toml
src/: aggregator.rs  config.rs  error.rs  fetcher.rs  lib.rs  main.rs  poller.rs  state.rs  types.rs
src/dmdata/: api.rs  body.rs  mod.rs  protocol.rs  ws.rs
src/http/: etag.rs  handlers.rs  mod.rs
src/jma/: entity_parse.rs  feed_parse.rs  feed_render.rs  id.rs  mod.rs
tests/: aggregator.rs  http_api.rs  poller.rs
tests/fixtures/: eqvol_sample.xml  telegram_list.json  ws_data.json  ws_error.json  ws_ping.json  ws_start.json
