[package]
name = "jma-feed-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.2"
axum = "0.8"
base64 = "0.22.1"
blake3 = "1.8.5"
bytes = "1.12.0"
dashmap = "6"
figment = { version = "0.10", features = ["toml", "env", "test"] }
flate2 = "1.1.9"
futures-util = "0.3.32"
moka = { version = "0.12", features = ["future", "sync"] }
quick-xml = "0.41.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "gzip", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6"

[[bench]]
name = "http_serve"
harness = false
